tests/snapshots/snapshot_tests__array_max_min_approx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 753
expression: run_benchmark (& path)
---
BenchmarkResult {
    example_name: "examples/array/array_max_min_approx.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 max+0) i+0) max+0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 min+0) i+0) min+0)",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 max+0) Z) (Read_Int_Int b+0 Z)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 min+0) Z) (Read_Int_Int b+0 Z)))",
    ],
}
