tests/snapshots/snapshot_tests__array_max_min_shift.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_max_min_shift.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) (- max+0 min+0))) i+0) (+ (Read_Int_Int a+0 i+0) (- max+0 min+0)))",
        "(=> (not (= Z i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (+ (Read_Int_Int a+0 i+0) (- max+0 min+0))) Z) (Read_Int_Int b+0 Z)))",
    ],
}
