tests/snapshots/snapshot_tests__array_min_and_copy_shift_sum.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_min_and_copy_shift_sum.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 0 0) 0) 0)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (- (Read_Int_Int a+0 (- N (+ i+0 1))) j+0)) i+0) (- (Read_Int_Int a+0 (- N (+ i+0 1))) j+0))",
        "(=> (not (= 0 k+5)) (= (Read_Int_Int (Write_Int_Int b+0 k+5 0) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (- (Read_Int_Int a+0 (- N (+ i+0 1))) j+0)) N) (Read_Int_Int b+0 N)))",
        "(=> (not (= N k+5)) (= (Read_Int_Int (Write_Int_Int b+0 k+5 0) N) (Read_Int_Int b+0 N)))",
        "(=> (not (= i+0 i+3)) (= (Read_Int_Int (Write_Int_Int b+3 i+3 (- (Read_Int_Int a+3 (- N (+ i+3 1))) j+3)) i+0) (Read_Int_Int b+3 i+0)))",
    ],
}
