tests/snapshots/snapshot_tests__array_min_and_copy_shift_sum_add.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_min_and_copy_shift_sum_add.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 0 19620) 0) 19620)",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (- (Read_Int_Int a+0 i+0) j+0)) i+0) (- (Read_Int_Int a+0 i+0) j+0))",
        "(=> (not (= 0 N)) (= (Read_Int_Int (Write_Int_Int b+0 N 0) 0) (Read_Int_Int b+0 0)))",
        "(=> (not (= N i+0)) (= (Read_Int_Int (Write_Int_Int b+0 i+0 (- (Read_Int_Int a+0 i+0) j+0)) N) (Read_Int_Int b+0 N)))",
        "(=> (not (= i+0 i+4)) (= (Read_Int_Int (Write_Int_Int b+4 i+4 (- (Read_Int_Int a+4 i+4) j+4)) i+0) (Read_Int_Int b+4 i+0)))",
    ],
}
