tests/snapshots/snapshot_tests__array_min_swap.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_min_swap.vmt",
    status: Timeout,
    used_instantiations: [],
}
